# dmjc-mate-paint

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  mate-paint.cpp  matepaintui.rc  math_utils.cpp  math_utils.hpp  meson.build  org.kde.matepaint.desktop  resources.qrc
.github/workflows/: build.yml
src/: clipboard.c  color-picker.c  color-picker.h  color.c  color.h  common.h  cv_airbrush_tool.c  cv_color_pick_tool.c  cv_curve_tool.c  cv_drawing.c  cv_drawing.h  cv_ellipse_tool.c  cv_eraser_tool.c  cv_flood_fill_tool.c  cv_line_tool.c  cv_paintbrush_tool.c  cv_pencil_tool.c  cv_polygon_tool.c  cv_rect_select.c  cv_rectangle_tool.c  cv_resize.c  cv_rounded_rectangle_tool.c  gp-image.c  gp-image.h  gp_point_array.c  image_menu.c  main.c  mate_paint.ui  matepaint.cpp  matepaint.hpp  pixbuf_util.c  pixbuf_util.h  selection.c  selection.h  undo.c  undo.h
tests/: Makefile  test_gp_point_array.c  test_math_utils.cpp
